[project]
name = "time-series-for-business-analytics-with-python"
version = "0.1.0"
description = "Companion code for Medium article: time series for business analytics with python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=2.3.3",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
